# seminario1-mlapi

./: .gitattributes  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
seminario1_api/: api.py  app.py  application.py  sample_request.py  wsgi.py
tests/: test_seminario1_api.py
